# DesignModel

./: AdvancedSFINAE.cpp  AdvancedSFINAE2.cpp  AdvancedSFINAErevisited.cpp  AdvancedSFINAErevisited2.cpp  BasicSFINAE.cpp  CMakeLists.txt  CRTPandAccessControl.cpp  CarefulImplementationOfRAIIobject.cpp  ClassTemplares.h  ClassTemplates2.h  CompileTimePolymorphism.cpp  CountingResources.cpp  EffectOfLocalbufferOptimization.cpp  ExpandingTheInterface.cpp  ExpressNonOwnship.h  ExpressingExclusiveOwnership.h  ExpressingSharedOwnership.h  ExpressingTransferOfExclusiveOwnership.h  FunctionTemplate2.h  FunctionTemplates.h  GeneralMethodChaining.cpp  ImplementingSwap.h  IntroducingCRTP.cpp  LambdaExpressions.h  MethodChaining.cpp  MethodChainingAndNamedArguments.cpp  MethodChainingInClassHierarchies.cpp  MethodChainingInClassHierarchies2.cpp  NontypeTemplateParameters.h  OtherCommonSwapIdioms.h  PartialSpecialization.h  PerformanceOfTheNamedArgumentsIdiom.cpp  RAII_for_other_resources.cpp  RAII_in_a_nutshell.cpp  Releasing_early.cpp  SFINAE.cpp  SmallVector.cpp  SwapAndExceptionSafety.h  SwapAndSTLContainers.h  TemplateFunctionOverloading.h  (+18 more)
AdaptersAndDecorators/: AdapterVersusPolicy.cpp  BasicDecoratorPattern.cpp  BasisAdapterPattern.cpp  CompileTimeAdapters.cpp  ComposableDecorators.cpp  DecoratorsTheCppWay.cpp  FunctionAdapters.cpp  PolymorphicDecoratorsAndTheirLimitations.cpp
FriendFactory/: FriendFactoryFinal.cpp  FriendsOfTemplateClasses.cpp  FriendsVersusMemberFunction.cpp  GeneratingFriendsOnDemand.cpp  HowToGrantFriendShip.cpp
PolicyBasedDesign/: FoundationsOfPolicyBasedDesign.cpp  PoliciesForConstructors.cpp  PoliciesForConstructors2.cpp  UseOfPolicyObjects.cpp  UseOfPolicyObjects2.cpp  UsingPoliciesToControlThePublicInterface.cpp
ScopedGuard/: ExceptionDrivernScopedGuard.cpp  GenericScopeGuard.cpp  RAII.cpp  ScopedGuardBasics.cpp  common.h
Singleton/: LeakySingleton.cpp  MeyersSingleton.cpp  MeyersSingleton_p1.cpp  SingletonIpm1.cpp  SingletonIpm1.h  SingletonIpm1_p1.cpp  SingletonIpm1_p1.h  StaticSingleton.cpp  WhatIsASingleton.cpp
TheTemplateMethodPatternAndTheNonVirtualIdiom/: ANoteAboutDestructors.cpp  ApplicationsOfTheTemplateMethod.cpp  Composability.cpp  PreAndPostConditionsAndActions.cpp  TheNVIidiom.cpp  TheTemplateMethod.cpp  VirtualFunctionsAndAccess.cpp
TheVisitorPatternAndMultipleDispatch/: AcyclicVisitor.cpp  BasicVisitorinCpp.cpp  GenericVisitor.cpp  SerializationAndDeserializationWithVisitor.cpp  WhatIsTheVisitorPattern.cpp
VirtualConstructorsAndFactories/: ArgumentsForFactoryMethods.cpp  CRTPFactoryAndReturnTypes.cpp  CRTPFactoryWithLessCopyPatse.cpp  DynamicTypeRegistry.cpp  PolymorphicCopy.cpp  PolymorphicFactory.cpp  TheBasicOfTheFactoryMethod.cpp  WhendoesAnObjectgetItstype.cpp  WhendoesAnObjectgetItstype2.cpp
