cmake_minimum_required(VERSION 3.15)
project(DesignPattern)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAG -g -O4 -Wall -Wextra -Werror -pedantic)

include_directories(/usr/local/include)
link_directories(/usr/local/lib)

add_executable(DesignPattern main.cpp)


add_executable(CountingResources CountingResources.cpp)
target_link_libraries(CountingResources benchmark gtest gtest_main)

add_executable(RAII_in_a_nutshell RAII_in_a_nutshell.cpp)
target_link_libraries(RAII_in_a_nutshell benchmark gtest gtest_main)

add_executable(RAII_for_other_resources RAII_for_other_resources.cpp)
target_link_libraries(RAII_for_other_resources gtest gtest_main)

add_executable(Releasing_early Releasing_early.cpp)
target_link_libraries(Releasing_early gtest gtest_main)

add_executable(CarefulImplementationOfRAIIobject CarefulImplementationOfRAIIobject.cpp)
target_link_libraries(CarefulImplementationOfRAIIobject gtest gtest_main)

add_executable(TypeErasureByExample TypeErasureByExample.cpp)
add_executable(TypeErasureinCpp TypeErasureinCpp.cpp)

add_executable(TheOverheadOfTypeErasure TheOverheadOfTypeErasure.cpp)
target_link_libraries(TheOverheadOfTypeErasure benchmark)

add_executable(TemplateFunctions TemplateFunctions.cpp)

add_executable(SFINAE SFINAE.cpp)
add_executable(BasicSFINAE BasicSFINAE.cpp)
add_executable(AdvancedSFINAE AdvancedSFINAE.cpp)
add_executable(AdvancedSFINAE2 AdvancedSFINAE2.cpp)
add_executable(AdvancedSFINAErevisited AdvancedSFINAErevisited.cpp)
add_executable(AdvancedSFINAErevisited2 AdvancedSFINAErevisited2.cpp)
add_executable(TheUltimateSFINAE TheUltimateSFINAE.cpp)

add_executable(WhatIsWringWithAVirtualFunction WhatIsWringWithAVirtualFunction.cpp)
target_link_libraries(WhatIsWringWithAVirtualFunction benchmark)

add_executable(IntroducingCRTP IntroducingCRTP.cpp)
target_link_libraries(IntroducingCRTP benchmark)

add_executable(CompileTimePolymorphism CompileTimePolymorphism.cpp)
add_executable(CRTPandAccessControl CRTPandAccessControl.cpp)

add_executable(ExpandingTheInterface ExpandingTheInterface.cpp)

add_executable(MethodChaining MethodChaining.cpp)
add_executable(MethodChainingAndNamedArguments MethodChainingAndNamedArguments.cpp)

add_executable(PerformanceOfTheNamedArgumentsIdiom PerformanceOfTheNamedArgumentsIdiom.cpp)
target_link_libraries(PerformanceOfTheNamedArgumentsIdiom benchmark m)

add_executable(GeneralMethodChaining GeneralMethodChaining.cpp)
add_executable(MethodChainingInClassHierarchies MethodChainingInClassHierarchies.cpp)
add_executable(MethodChainingInClassHierarchies2 MethodChainingInClassHierarchies2.cpp)

add_executable(TheCostOfMemoryAllocations TheCostOfMemoryAllocations.cpp)
target_link_libraries(TheCostOfMemoryAllocations benchmark pthread)

add_executable(EffectOfLocalbufferOptimization
        EffectOfLocalbufferOptimization.cpp TheMainIdea.cpp)
target_link_libraries(EffectOfLocalbufferOptimization benchmark)
