cmake_minimum_required(VERSION 3.15)
project(DesignPattern)

# include_directories(SYSTEM "/foo/bar")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAG -g -O4 -Wall -Wextra -Werror -pedantic)

include_directories(/usr/local/include)
link_directories(/usr/local/lib)

add_executable(DesignPattern main.cpp)


add_executable(CountingResources CountingResources.cpp)
target_link_libraries(CountingResources benchmark gtest gtest_main)

add_executable(RAII_in_a_nutshell RAII_in_a_nutshell.cpp)
target_link_libraries(RAII_in_a_nutshell benchmark gtest gtest_main)

add_executable(RAII_for_other_resources RAII_for_other_resources.cpp)
target_link_libraries(RAII_for_other_resources gtest gtest_main)

add_executable(Releasing_early Releasing_early.cpp)
target_link_libraries(Releasing_early gtest gtest_main)

add_executable(CarefulImplementationOfRAIIobject CarefulImplementationOfRAIIobject.cpp)
target_link_libraries(CarefulImplementationOfRAIIobject gtest gtest_main)

add_executable(TypeErasureByExample TypeErasureByExample.cpp)
add_executable(TypeErasureinCpp TypeErasureinCpp.cpp)

add_executable(TheOverheadOfTypeErasure TheOverheadOfTypeErasure.cpp)
target_link_libraries(TheOverheadOfTypeErasure benchmark)

add_executable(TemplateFunctions TemplateFunctions.cpp)

add_executable(SFINAE SFINAE.cpp)
add_executable(BasicSFINAE BasicSFINAE.cpp)
add_executable(AdvancedSFINAE AdvancedSFINAE.cpp)
add_executable(AdvancedSFINAE2 AdvancedSFINAE2.cpp)
add_executable(AdvancedSFINAErevisited AdvancedSFINAErevisited.cpp)
add_executable(AdvancedSFINAErevisited2 AdvancedSFINAErevisited2.cpp)
add_executable(TheUltimateSFINAE TheUltimateSFINAE.cpp)

add_executable(WhatIsWringWithAVirtualFunction WhatIsWringWithAVirtualFunction.cpp)
target_link_libraries(WhatIsWringWithAVirtualFunction benchmark)

add_executable(IntroducingCRTP IntroducingCRTP.cpp)
target_link_libraries(IntroducingCRTP benchmark)

add_executable(CompileTimePolymorphism CompileTimePolymorphism.cpp)
add_executable(CRTPandAccessControl CRTPandAccessControl.cpp)

add_executable(ExpandingTheInterface ExpandingTheInterface.cpp)

add_executable(MethodChaining MethodChaining.cpp)
add_executable(MethodChainingAndNamedArguments MethodChainingAndNamedArguments.cpp)

add_executable(PerformanceOfTheNamedArgumentsIdiom PerformanceOfTheNamedArgumentsIdiom.cpp)
target_link_libraries(PerformanceOfTheNamedArgumentsIdiom benchmark m)

add_executable(GeneralMethodChaining GeneralMethodChaining.cpp)
add_executable(MethodChainingInClassHierarchies MethodChainingInClassHierarchies.cpp)
add_executable(MethodChainingInClassHierarchies2 MethodChainingInClassHierarchies2.cpp)

add_executable(TheCostOfMemoryAllocations TheCostOfMemoryAllocations.cpp)
target_link_libraries(TheCostOfMemoryAllocations benchmark pthread)

add_executable(EffectOfLocalbufferOptimization
        EffectOfLocalbufferOptimization.cpp TheMainIdea.cpp)
target_link_libraries(EffectOfLocalbufferOptimization benchmark)

add_executable(SmallVector SmallVector.cpp)
target_link_libraries(SmallVector benchmark)

add_executable(Type_erasedAndCallableObjects Type_erasedAndCallableObjects.cpp)
target_link_libraries(Type_erasedAndCallableObjects benchmark)

add_executable(RAII ScopedGuard/RAII.cpp ScopedGuard/GenericScopeGuard.cpp )
add_executable(ScopedGuardBasics ScopedGuard/ScopedGuardBasics.cpp)
add_executable(GenericScopeGuard ScopedGuard/GenericScopeGuard.cpp )
add_executable(ExceptionDrivernScopedGuard ScopedGuard/ExceptionDrivernScopedGuard.cpp)

add_executable(HowToGrantFriendShip FriendFactory/HowToGrantFriendShip.cpp)
add_executable(FriendsVersusMemberFunction FriendFactory/FriendsVersusMemberFunction.cpp)
add_executable(FriendsOfTemplateClasses FriendFactory/FriendsOfTemplateClasses.cpp)
add_executable(GeneratingFriendsOnDemand FriendFactory/GeneratingFriendsOnDemand.cpp)
add_executable(FriendFactoryFinal FriendFactory/FriendFactoryFinal.cpp)

add_executable(WhendoesAnObjectgetItstype VirtualConstructorsAndFactories/WhendoesAnObjectgetItstype.cpp)
add_executable(WhendoesAnObjectgetItstype2 VirtualConstructorsAndFactories/WhendoesAnObjectgetItstype2.cpp)
add_executable(TheBasicOfTheFactoryMethod VirtualConstructorsAndFactories/TheBasicOfTheFactoryMethod.cpp)
add_executable(ArgumentsForFactoryMethods VirtualConstructorsAndFactories/ArgumentsForFactoryMethods.cpp)
add_executable(DynamicTypeRegistry VirtualConstructorsAndFactories/DynamicTypeRegistry.cpp)
add_executable(PolymorphicFactory VirtualConstructorsAndFactories/PolymorphicFactory.cpp)
add_executable(PolymorphicCopy VirtualConstructorsAndFactories/PolymorphicCopy.cpp)
add_executable(CRTPFactoryAndReturnTypes VirtualConstructorsAndFactories/CRTPFactoryAndReturnTypes.cpp)
add_executable(CRTPFactoryWithLessCopyPatse VirtualConstructorsAndFactories/CRTPFactoryWithLessCopyPatse.cpp)

add_executable(TheTemplateMethod TheTemplateMethodPatternAndTheNonVirtualIdiom/TheTemplateMethod.cpp)
add_executable(ApplicationsOfTheTemplateMethod TheTemplateMethodPatternAndTheNonVirtualIdiom/ApplicationsOfTheTemplateMethod.cpp)
add_executable(PreAndPostConditionsAndActions TheTemplateMethodPatternAndTheNonVirtualIdiom/PreAndPostConditionsAndActions.cpp)
add_executable(VirtualFunctionsAndAccess TheTemplateMethodPatternAndTheNonVirtualIdiom/VirtualFunctionsAndAccess.cpp)
add_executable(TheNVIidiom TheTemplateMethodPatternAndTheNonVirtualIdiom/TheNVIidiom.cpp)
add_executable(ANoteAboutDestructors TheTemplateMethodPatternAndTheNonVirtualIdiom/ANoteAboutDestructors.cpp)
add_executable(Composability TheTemplateMethodPatternAndTheNonVirtualIdiom/Composability.cpp)

add_executable(WhatIsASingleton Singleton/WhatIsASingleton.cpp)
add_executable(StaticSingleton Singleton/StaticSingleton.cpp)
target_link_libraries(StaticSingleton benchmark)
add_executable(MeyersSingleton Singleton/MeyersSingleton.cpp)
target_link_libraries(MeyersSingleton benchmark)
add_executable(MeyersSingleton_p1 Singleton/MeyersSingleton_p1.cpp)
target_link_libraries(MeyersSingleton_p1 benchmark)
add_executable(SingletonIpm1 Singleton/SingletonIpm1.cpp)
target_link_libraries(SingletonIpm1 benchmark)
add_executable(SingletonIpm1_p1 Singleton/SingletonIpm1_p1.cpp)
target_link_libraries(SingletonIpm1_p1 benchmark)
add_executable(LeakySingleton Singleton/LeakySingleton.cpp)
target_link_libraries(LeakySingleton benchmark)

add_executable(FoundationsOfPolicyBasedDesign PolicyBasedDesign/FoundationsOfPolicyBasedDesign.cpp)
add_executable(UseOfPolicyObjects PolicyBasedDesign/UseOfPolicyObjects.cpp)
add_executable(UseOfPolicyObjects2 PolicyBasedDesign/UseOfPolicyObjects2.cpp)
add_executable(PoliciesForConstructors PolicyBasedDesign/PoliciesForConstructors.cpp)
add_executable(PoliciesForConstructors2 PolicyBasedDesign/PoliciesForConstructors2.cpp)
add_executable(UsingPoliciesToControlThePublicInterface PolicyBasedDesign/UsingPoliciesToControlThePublicInterface.cpp)

add_executable(BasicDecoratorPattern AdaptersAndDecorators/BasicDecoratorPattern.cpp)
add_executable(DecoratorsTheCppWay AdaptersAndDecorators/DecoratorsTheCppWay.cpp)
add_executable(PolymorphicDecoratorsAndTheirLimitations AdaptersAndDecorators/PolymorphicDecoratorsAndTheirLimitations.cpp)
add_executable(ComposableDecorators AdaptersAndDecorators/ComposableDecorators.cpp)

add_executable(BasisAdapterPattern AdaptersAndDecorators/BasisAdapterPattern.cpp)
add_executable(FunctionAdapters AdaptersAndDecorators/FunctionAdapters.cpp)
add_executable(CompileTimeAdapters AdaptersAndDecorators/CompileTimeAdapters.cpp)
add_executable(AdapterVersusPolicy AdaptersAndDecorators/AdapterVersusPolicy.cpp)

add_executable(WhatIsTheVisitorPattern TheVisitorPatternAndMultipleDispatch/WhatIsTheVisitorPattern.cpp)
add_executable(BasicVisitorinCpp TheVisitorPatternAndMultipleDispatch/BasicVisitorinCpp.cpp)
add_executable(SerializationAndDeserializationWithVisitor TheVisitorPatternAndMultipleDispatch/SerializationAndDeserializationWithVisitor.cpp)
add_executable(AcyclicVisitor TheVisitorPatternAndMultipleDispatch/AcyclicVisitor.cpp)
add_executable(GenericVisitor TheVisitorPatternAndMultipleDispatch/GenericVisitor.cpp)